@@ -1,3 +1,6 @@
+2008-02-23  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
+	* hiki/filter.rb, test/spec_filter.rb: Ignore error raised inregisterd filter.
+
 2008-02-20  KURODA Hiraku  <hiraku@sapporo.email.ne.jp>
 	* plugin/50bayes_filter.rb: Fix a bug for ruby-1.8.5.
 
